# horus-tf

./: Cargo.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
python/: Cargo.toml
python/horus_tf/: __init__.py
python/src/: lib.rs
src/: bench.rs  bridge.rs  builder.rs  config.rs  core.rs  lib.rs  messages.rs  prelude.rs  publisher.rs  query.rs  registry.rs  slot.rs  transform.rs  types.rs
tests/: transform_frame_acceptance.rs  transform_frame_battle.rs  transform_frame_edge_cases.rs  transform_frame_intent.rs  transform_frame_property.rs  transform_frame_proptest.rs  transform_frame_stress.rs  transform_frame_tf2_parity.rs
