[package]
name = "horus-tf-py"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for horus-tf coordinate frame transforms"

[lib]
name = "_horus_tf"
crate-type = ["cdylib"]

[dependencies]
horus-tf = { path = ".." }
pyo3 = { version = "0.23", features = ["extension-module"] }
